--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Project </title>
-</head>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    </head>
 <body>
+
+    <!-- heaser section  -->
+
+    <header>
+        <div class="header-content">
+            <h1>All Thinks Are <br> Possible If You <br> believe</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised wordsxa</p>
+            <button>contact us </button>
+        </div>
+    </header>
+
+    <!-- failures section  -->
     
 </body>
 </html>
