--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year Project </title>
+    <!-- css link  -->
     <link rel="stylesheet" href="css/style.css">
+    <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600&display=swap" rel="stylesheet">
+    <!-- font awesome  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
 <body>
 
@@ -22,6 +26,51 @@
     </header>
 
     <!-- failures section  -->
+    <section class="failur">
+        <div class="failur-sec">
+            <div class="failure-img">
+                <img src="/images/person.png" alt="">
+            </div>
+            <div class="failure-content">
+                <h2>My failures of previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply  random text. It has <br> roots in a piece of classical Latin  literature from 45 BC,<br> making it over 2000 years old Richard McClintock.</p>
+                <ul>
+                    <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.</li>
+                    <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular belief.</li>
+                    <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular , is not simply.</li>
+                    <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.</li>
+                    <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular simply.</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
+    <!-- plan section  -->
     
+    <section class="plans-section">
+        <h1></h1>
+        <div class="plans">
+            <div class="plan">
+                <img src="/images/icons/web.png" alt="">
+                <h3>Web Development </h3>
+                <p>I want to start </p>
+            </div>
+            <div class="plan">
+                <img src="/images/icons/js.png" alt="">
+                <h3> Jsvascript</h3>
+                <p>I want to learn </p>
+            </div>
+            <div class="plan">
+                <img src="/images/icons/smoke.png" alt="">
+                <h3>Smoking habit</h3>
+                <p> I want to end </p>
+            </div>
+            <div class="plan">
+                <img src="/images/icons/ecom.png" alt="">
+                <h3>E commerce</h3>
+                <p>I want develop</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
