banner & footer section added

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div class="failure-content">
                 <h2>My failures of previous year</h2>
-                <p>Contrary to popular belief, Lorem Ipsum is not simply  random text. It has <br> roots in a piece of classical Latin  literature from 45 BC,<br> making it over 2000 years old Richard McClintock.</p>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply  <br> random   text. It has roots in a pieceof classical Latin <br>  literature from 45 BC, making it over 2000 <br>years old Richard McClintock.</p>
                 <ul>
                     <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular belief, is not simply.</li>
                     <li> <span><i class="fa-solid fa-check"></i></span> Contrary to popular belief.</li>
@@ -48,7 +48,7 @@
     <!-- plan section  -->
     
     <section class="plans-section">
-        <h1></h1>
+        <h1>My Plans</h1>
         <div class="plans">
             <div class="plan">
                 <img src="/images/icons/web.png" alt="">
@@ -71,6 +71,42 @@
                 <p>I want develop</p>
             </div>
         </div>
+
+        <div class="banner">
+            <div class="banner-overlay">
+                <img src="/images/gradient2.png" alt="">
+            </div>
+            <div class="banner-content">
+                <h1>Awlays keep a positive <br> mindset</h1>
+                <button>Call Now</button>
+            </div>
+        </div>
     </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="future">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <br>
+                <p>Email : info@gmail.com</p>
+                <br>
+                <p>Phone : 01500 00 00 00</p>
+                <br>
+                <ul>
+                    <li><img src="/images/icons/fb.png" alt=""> </li>
+                    <li> <img src="/images/icons/youtube.png" alt=""> </li>
+                    <li> <img src="/images/icons/twitter.png" alt=""> </li>
+                </ul>
+            </div>
+            <div class="subscribe">
+                <h3>Subscribe</h3>
+               <div class="subs-form">
+                <input type="text" placeholder="Enter your Emial"> <br>
+                <button>Subscribe</button>
+               </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
