new section meet our client added

--- a/index.html
+++ b/index.html
@@ -45,6 +45,35 @@
         </div>
     </section>
 
+    <!-- client section  -->
+    <section class="client-section">
+        <h1>Meet our client </h1>
+        <div class="clients">
+            <div class="client">
+                <img src="/images/jeny.jpg" alt="">
+                <h3>Jenny Wilson</h3>
+                <p>Marketer, Glassdoor</p>
+            </div>
+            <div class="client">
+                <img src="/images/bel.jpg" alt="">
+                <h3>Jerome Bell</h3>
+                <p>Strategic Advisor, Shopify</p>
+            </div>
+            <div class="client">
+                <img src="/images/mac.jpg" alt="">
+                <h3>Marvin McKinney</h3>
+                <p> Founder & CEO, Uber</p>
+            </div>
+            <div class="client">
+                <img src="/images/mur.jpg" alt="">
+                <h3>Kathryn Murphy</h3>
+                <p>
+                    Marketing Coordinator
+                    </p>
+            </div>
+        </div>
+    </section>
+
     <!-- plan section  -->
     
     <section class="plans-section">
@@ -74,7 +103,7 @@
 
         <div class="banner">
             <div class="banner-overlay">
-                <img src="/images/gradient2.png" alt="">
+                <img src="/images/gradient.png" alt="">
             </div>
             <div class="banner-content">
                 <h1>Awlays keep a positive <br> mindset</h1>
