--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section class="failur">
         <div class="failur-sec">
             <div class="failure-img">
-                <img src="/images/person.png" alt="">
+                <img src="./images/person.png" alt="">
             </div>
             <div class="failure-content">
                 <h2>My failures of previous year</h2>
@@ -50,22 +50,22 @@
         <h1>Meet our client </h1>
         <div class="clients">
             <div class="client">
-                <img src="/images/jeny.jpg" alt="">
+                <img src="./images/jeny.jpg" alt="">
                 <h3>Jenny Wilson</h3>
                 <p>Marketer, Glassdoor</p>
             </div>
             <div class="client">
-                <img src="/images/bel.jpg" alt="">
+                <img src="./images/bel.jpg" alt="">
                 <h3>Jerome Bell</h3>
                 <p>Strategic Advisor, Shopify</p>
             </div>
             <div class="client">
-                <img src="/images/mac.jpg" alt="">
+                <img src="./images/mac.jpg" alt="">
                 <h3>Marvin McKinney</h3>
                 <p> Founder & CEO, Uber</p>
             </div>
             <div class="client">
-                <img src="/images/mur.jpg" alt="">
+                <img src="./images/mur.jpg" alt="">
                 <h3>Kathryn Murphy</h3>
                 <p>
                     Marketing Coordinator
@@ -80,22 +80,22 @@
         <h1>My Plans</h1>
         <div class="plans">
             <div class="plan">
-                <img src="/images/icons/web.png" alt="">
+                <img src="./images/icons/web.png" alt="">
                 <h3>Web Development </h3>
                 <p>I want to start </p>
             </div>
             <div class="plan">
-                <img src="/images/icons/js.png" alt="">
+                <img src="./images/icons/js.png" alt="">
                 <h3> Jsvascript</h3>
                 <p>I want to learn </p>
             </div>
             <div class="plan">
-                <img src="/images/icons/smoke.png" alt="">
+                <img src="./images/icons/smoke.png" alt="">
                 <h3>Smoking habit</h3>
                 <p> I want to end </p>
             </div>
             <div class="plan">
-                <img src="/images/icons/ecom.png" alt="">
+                <img src="./images/icons/ecom.png" alt="">
                 <h3>E commerce</h3>
                 <p>I want develop</p>
             </div>
@@ -103,7 +103,7 @@
 
         <div class="banner">
             <div class="banner-overlay">
-                <img src="/images/gradient.png" alt="">
+                <img src="./images/gradient.png" alt="">
             </div>
             <div class="banner-content">
                 <h1>Awlays keep a positive <br> mindset</h1>
@@ -123,9 +123,9 @@
                 <p>Phone : 01500 00 00 00</p>
                 <br>
                 <ul>
-                    <li><img src="/images/icons/fb.png" alt=""> </li>
-                    <li> <img src="/images/icons/youtube.png" alt=""> </li>
-                    <li> <img src="/images/icons/twitter.png" alt=""> </li>
+                    <li><img src="./images/icons/fb.png" alt=""> </li>
+                    <li> <img src="./images/icons/youtube.png" alt=""> </li>
+                    <li> <img src="./images/icons/twitter.png" alt=""> </li>
                 </ul>
             </div>
             <div class="subscribe">
