--- a/index.html
+++ b/index.html
@@ -102,15 +102,17 @@
         </div>
 
         <div class="banner">
-            <div class="banner-overlay">
+            <!-- <div class="banner-overlay">
                 <img src="./images/gradient.png" alt="">
-            </div>
+            </div> -->
             <div class="banner-content">
                 <h1>Awlays keep a positive <br> mindset</h1>
                 <button>Call Now</button>
             </div>
         </div>
     </section>
+
+    <!-- footer section  -->
 
     <footer>
         <div class="footer-container">
